methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:2: error: value tp is not a member of Int
  for (i <- 1 tp 4) {
              ^