methods.picture.PictureMono2.scala.code
override def run() {
  for (i <- 1 tp 4) {
    makeV();
  }
}

def makeV() {
  for (i <- 1 to 3) {
    forward(2);
    brushDown();
    brushUp();
    left();
    forward();
    right();
    forward();
    brushDown();
    brushUp();
    forward();
    right();
    forward();
    brushDown();
    brushUp();
    left();
    forward(2);
  }
  left();
}